--- a/Introductie/html/contact.html
+++ b/Introductie/html/contact.html
@@ -9,8 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
-    <form method="post" action="https://formspree.io/f/mknarnok">
-    <head>
+    </head>
     <body>
     <header id="tis">
     <table>
@@ -39,14 +38,14 @@
     <!--Let op bij veranderingen.text-shadow en color zijn per pagina afgemeten in verband met style en background-->
     <div>
     <h2 id="pos">INSCHRIJFFORMULIER</h2>
-    <form>
+    <form method="post" action="https://formspree.io/f/mknarnok">>
     <table><tr><td>
     <div><fieldset id="klr"><legend></legend>
     <label for="tvn">Voornaam</label>
     <input type="text" name="naam" id="tvn" placeholder="">
     <label for="tan">Achternaam</label> 
     <input type="text" name="naam" id="tan" placeholder="">
-     <label for="">Adres</label>
+     <label for="tad">Adres</label>
     <input type="text" name="adres" id="tad" placeholder="">
     <label for="tpc">Postcode</label>
     <input type="text" name="postcode" id="tpc" placeholder="">
@@ -56,7 +55,8 @@
     <input type="email" name="email" id="ema" placeholder="">
     <label for="atp">aantal peronen</label>
     <input type="number" name="aantal" id="atp" placeholder="0">
-    </div></fieldset>
+    </fieldset>
+    </div>
     </td>
     <td>
     <div>
@@ -65,12 +65,12 @@
     <input type="radio" name="geslacht" value="vrouw">Vrouw
     <p id="bgr">* Vul hier uw bloedgroep in</p>
     <table>
-    <ul>
+    </ul>
     <tr><td><li> A+<input type="checkbox" name="bloedgroep" value="ja"></li></td><td class="afd"></td><td><li>AB+<input type="checkbox" name="bloedgroep" value="ja"></li></td></tr>
     <tr><td><li> A-<input type="checkbox" name="bloedgroep" value="ja"></li></td><td class="afd"></td><td><li>AB-<input type="checkbox" name="bloedgroep" value="ja"></li></td></tr>
     <tr><td><li> B+<input type="checkbox" name="bloedgroep" value="ja"></li></td><td class="afd" ></td><td><li>&nbsp; O+<input type="checkbox" name="bloedgroep" value="ja"></li></td></tr>
     <tr><td><li> B-<input type="checkbox" name="bloedgroep" value="ja"></li></td><td class="afd"></td><td><li>&nbsp; O-<input type="checkbox" name="bloedgroep" value="ja"></li></td></tr>
-    </ul>  
+    </ul>
     </table>
     <p id="rbs">Voor de route naar mijn kasteel;<br>
     <a id="sbl" href="https://www.google.nl/maps/place/Kasteel+Bran/@45.5149059,25.364975,17z/data=!3m1!4b1!4m6!3m5!1s0x40b347e5a415de31:0xcf922792d921ab7f!8m2!3d45.5149022!4d25.3671637!16zL20vMDJnbXk3" target="_blank">Dracula Maps</a></p>      
