--- a/Introductie/index.html
+++ b/Introductie/index.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
-    <head>
+    </head>
     <body>
+        <!--img dracula niet in de <dt> meegenomen, dit om verspringen van andere elementen te voorkomen -->
     <header><table><tr><td><h1>BED AND BREAKFAST TRANSYLVANIA</h1></td>
     <img src="img/dracula 1.jpg" alt="afbeelding dracula" title="Graaf Dracula" id="vader"></tr>
     <tr>
