--- a/Introductie/html/contact.html
+++ b/Introductie/html/contact.html
@@ -15,6 +15,7 @@
     <table>
     <tr>
     <td>
+      <!--figcaption bij de image meegenomen als link/ negeer w3c-->
     <figure>
     <a href="mijncv.html">
     <img src="../img/dochter5.jpg" id="dochter5" alt="Dochter van Dracula" title="Link naar CV Dracula">
