--- a/Introductie/html/mijncv.html
+++ b/Introductie/html/mijncv.html
@@ -15,6 +15,7 @@
     <table>
     <tr>
     <td>
+     <!--figcaption bij de image meegenomen als link/ negeer w3c-->   
     <figure>
     <a href="../index.html">
     <img src="../img/kasteel.jpg" alt="link terug naar start pagina" title="Terug naar de homepage" id="home">
