--- a/Introductie/index.html
+++ b/Introductie/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
     </head>
     <body>
-        <!--img dracula niet in de <dt> meegenomen, dit om verspringen van andere elementen te voorkomen -->
+        <!--img dracula niet in de <dt> meegenomen, dit om verspringen van andere elementen te voorkomen/negeer w3c -->
     <header><table><tr><td><h1>BED AND BREAKFAST TRANSYLVANIA</h1></td>
     <img src="img/dracula 1.jpg" alt="afbeelding dracula" title="Graaf Dracula" id="vader"></tr>
     <tr>
