--- a/Introductie/html/contact.html
+++ b/Introductie/html/contact.html
@@ -39,7 +39,7 @@
     <!--Let op bij veranderingen.text-shadow en color zijn per pagina afgemeten in verband met style en background-->
     <div>
     <h2 id="pos">INSCHRIJFFORMULIER</h2>
-    <form method="post" action="https://formspree.io/f/mknarnok">>
+    <form method="post" action="https://formspree.io/f/mknarnok">
     <table><tr><td>
     <div><fieldset id="klr"><legend></legend>
     <label for="tvn">Voornaam</label>
