--- a/Introductie/index.html
+++ b/Introductie/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="keywords" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B&B Transylvania</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
     </head>
     <body>
-        <!--img dracula niet in de <dt> meegenomen, dit om verspringen van andere elementen te voorkomen/negeer w3c -->
+    <!--img dracula niet in de <dt> meegenomen, dit om verspringen van andere elementen te voorkomen/negeer w3c -->
     <header><table><tr><td><h1>BED AND BREAKFAST TRANSYLVANIA</h1></td>
     <img src="img/dracula 1.jpg" alt="afbeelding dracula" title="Graaf Dracula" id="vader"></tr>
     <tr>
