--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -38,13 +38,13 @@
            <div class="kolom">
             <img src="img/Aeolus.jpg">
             <h3>ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id ornare quam. Duis eget porta quam. Praesent vitae imperdiet metus. Curabitur urna dolor, efficitur sit amet facilisis non, semper ut eros. Aliquam nisi purus, finibus sed sapien sed, imperdiet facilisis nisi. Praesent vitae tempus risus, at varius libero. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque semper risus in lorem volutpat iaculis. Duis laoreet ipsum ut volutpat pretium. Donec facilisis dui vitae orci suscipit bibendum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id ornare quam. Duis eget porta quam. Praesent vitae imperdiet metus. Curabitur urna dolor, efficitur sit amet facilisis non, semper ut eros. Aliquam nisi purus, finibus sed sapien sed. Praesent vitae tempus risus, at varius libero. Orci varius natoque penatibus et magnis dis parturient montes.</p>
             
            </div> 
            <div class="kolom">
             <img src="img/stadsgehoorzaal.jpg"> 
             <h3>lorum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id ornare quam. Duis eget porta quam. Praesent vitae imperdiet metus. Curabitur urna dolor, efficitur sit amet facilisis non, semper ut eros. Aliquam nisi purus, finibus sed sapien sed, imperdiet facilisis nisi. Praesent vitae tempus risus, at varius libero. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque semper risus in lorem volutpat iaculis. Duis laoreet ipsum ut volutpat pretium. Donec facilisis dui vitae orci suscipit bibendum.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id ornare quam. Duis eget porta quam. Praesent vitae imperdiet metus. Curabitur urna dolor, efficitur sit amet facilisis non, semper ut eros. Aliquam nisi purus, finibus sed sapien sed. Praesent vitae tempus risus, at varius libero. Orci varius natoque penatibus et magnis dis parturient montes.</p>
            </div> 
          </div>
         
