--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -13,7 +13,8 @@
     </head>
     <body>
     <div class="row">
-        <header><h1>VLAARDINGEN</h1><img src="img/vlaardingen.png" id="hpt"></header>
+        <header><h1>VLAARDINGEN</h1>
+            <img src="img/vlaardingen.png" id="hpt"></header>
         
         <div class="col-2">
             <section id="een">
