--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -13,8 +13,9 @@
     </head>
     <body>
     <div class="row">
+        <table><tr><td>
         <header><h1>VLAARDINGEN</h1>
-            <img src="img/vlaardingen.png" id="hpt"></header>
+            <img src="img/vlaardingen.png" id="hpt"></header></td></tr></table>
         
         <div class="col-2">
             <section id="een">
