--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -11,8 +11,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Kalam:wght@700&display=swap" rel="stylesheet">
     </head>
-    <body>
-        <header><h1>VLAARDINGEN</h1>
+    <body><h1>VLAARDINGEN</h1>
+        <header>
             <img src="img/vlaardingen.png" id="hpt" alt="Havenkade met monumentpanden"></header>
         
         <div class="col-2">
