--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -11,9 +11,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Kalam:wght@700&display=swap" rel="stylesheet">
     </head>
-    <body><h1>VLAARDINGEN</h1>
-        <header>
-            <img src="img/vlaardingen.png" id="hpt" alt="Havenkade met monumentpanden"></header>
+    <body>
+        <header><div><h1>VLAARDINGEN</h1>
+            <img src="img/vlaardingen.png" id="hpt" alt="Havenkade met monumentpanden"></div></header>
         
         <div class="col-2">
             <section id="een">
