--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Kalam:wght@700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div><header><h1>VLAARDINGEN</h1>
+        <div class="col-12"><header><h1>VLAARDINGEN</h1>
             <img src="img/vlaardingen.png" id="hpt" alt="Havenkade met monumentpanden"></header></div>
         
         <div class="col-2">
