--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -12,9 +12,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Kalam:wght@700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="col-12"><header>
+        <div class="col-12"><header><h1>VLAARDINGEN</h1>
             <img src="img/vlaardingen.png" id="hpt" alt="Havenkade met monumentpanden" title="West Havenkade Vlaardingen">
-            <h1>VLAARDINGEN</h1></header></div>
+            </header></div>
         
         <div class="col-2">
             <section id="een">
