--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -12,9 +12,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Kalam:wght@700&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="row">
         <h1>VLAARDINGEN</h1><header>
             <img src="img/vlaardingen.png" id="hpt" alt="Havenkade met monumentpanden" title="West Havenkade Vlaardingen">
-            </header>
+            </header></div>
         
             <div class="col-2">
             <section id="een">
