--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="row">
-        <h1>VLAARDINGEN</h1><header>
+        <header><h1>VLAARDINGEN</h1>
             <img src="img/vlaardingen.png" id="hpt" alt="Havenkade met monumentpanden" title="West Havenkade Vlaardingen">
             </header></div>
         
