--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -41,11 +41,11 @@
          <p class="xx">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id ornare quam. Duis eget porta quam. Praesent vitae imperdiet metus. Curabitur urna dolor, efficitur sit amet facilisis non, semper ut eros. Aliquam nisi purus, finibus sed sapien sed. Praesent vitae tempus risus, at varius libero.</p>
          </div>
          </div>
-         <div class="col-12">
-            <section class="ftr">
+        
+            <section>
         <footer><p id="lit">Bron:Pinsterest / Wikipedia</p><p id="loc"> ©Copyright 2023 Hugo Krijnberg, alle rechten voorbehouden</p></footer>
         </section>
-    </div>
+
     
     </body>
 </html>
