--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -42,7 +42,7 @@
          </div>
          </div>
         
-         <section>   
+         <section class="col-12" id="drie">   
         <footer><p id="lit">Bron:Pinsterest / Wikipedia</p><p id="loc"> ©Copyright 2023 Hugo Krijnberg, alle rechten voorbehouden</p></footer>
          </section>
 
