--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -39,7 +39,7 @@
          <div class="kolom">
          <img src="img/stadsgehoorzaal.jpg" class="info" alt="Theater stadsgehoorzaal" title="Theater Stadsgehoorzaal"> 
          <h3>lorum</h3>
-         <p class="xx">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id ornare quam. Duis eget porta quam. Praesent vitae imperdiet metus. Curabitur urna dolor, efficitur sit amet facilisis non, semper ut eros. Aliquam nisi purus, finibus sed sapien sed. Praesent vitae tempus risus, at varius libero.</p>
+         <p class="xx">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id ornare quam. Duis eget porta quam. Praesent vitae imperdiet metus. Curabitur urna dolor, efficitur sit amet facilisis non, semper ut eros. Aliquam nisi purus, finibus sed sapien sed. Praesent vitae tempus risus.</p>
          </div>
          
         </div>
