--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -30,7 +30,9 @@
             </ol>
          </section>
          </div>
+         
          <div class="col-9" id="twee">
+            <section id="vier">
          <div class="kolom">
          <img src="img/Aeolus.jpg" class="info" alt="Windmolen" title="Windmolen Aeolus">
          <h3>ipsum</h3>
@@ -41,7 +43,7 @@
          <h3>lorum</h3>
          <p class="xx">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id ornare quam. Duis eget porta quam. Praesent vitae imperdiet metus. Curabitur urna dolor, efficitur sit amet facilisis non, semper ut eros. Aliquam nisi purus, finibus sed sapien sed. Praesent vitae tempus risus.</p>
          </div>
-         
+        </section>
         </div>
         <div class="col-12">
          <section id="drie">   
