--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -18,6 +18,9 @@
         <!--image as background in the header instead of background-image. url in html/css or style.css doesn't work, no image on mobile device-->
         <img src="img/vlaardingen.png" id="hpt" alt="Havenkade met monumentpanden" title="West Havenkade Vlaardingen">
         </header></div>
+
+        <div id="vier">
+
         <div class="col-2">
         <section id="een">
             <h2>Vlaardingse feitjes</h2>
@@ -31,20 +34,25 @@
          </section>
          </div>
          
+
          <div class="col-9" id="twee">
-            <section id="vier">
+         <section>
          <div class="kolom">
          <img src="img/Aeolus.jpg" class="info" alt="Windmolen" title="Windmolen Aeolus">
          <h3>ipsum</h3>
          <p class="xx">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id ornare quam. Duis eget porta quam. Praesent vitae imperdiet metus. Curabitur urna dolor, efficitur sit amet facilisis non, semper ut eros. Aliquam nisi purus, finibus sed sapien sed.</p>
          </div>
+         
          <div class="kolom">
          <img src="img/stadsgehoorzaal.jpg" class="info" alt="Theater stadsgehoorzaal" title="Theater Stadsgehoorzaal"> 
          <h3>lorum</h3>
          <p class="xx">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id ornare quam. Duis eget porta quam. Praesent vitae imperdiet metus. Curabitur urna dolor, efficitur sit amet facilisis non, semper ut eros. Aliquam nisi purus, finibus sed sapien sed. Praesent vitae tempus risus.</p>
          </div>
-        </section>
+         </section>
         </div>
+
+        </div>
+
         <div class="col-12">
          <section id="drie">   
         <footer><p id="lit">Bron:Pinsterest / Wikipedia</p></footer>
