--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -35,8 +35,8 @@
          </div>
          
 
-         <div class="col-9" id="twee">
-         <section>
+         <div class="col-9" >
+         <section id="twee">
          <div class="kolom">
          <img src="img/Aeolus.jpg" class="info" alt="Windmolen" title="Windmolen Aeolus">
          <h3>ipsum</h3>
