--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -11,12 +11,18 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Kalam:wght@700&display=swap" rel="stylesheet">
+    <style>
+        
+
+    </style>
     </head>
     <body>
         <div class="col-12">
         <header><h1>VLAARDINGEN</h1>
         <!--image as background in the header instead of background-image. url in html/css or style.css doesn't work, no image on mobile device-->
-        <img src="img/vlaardingen.png" id="hpt" alt="Havenkade met monumentpanden" title="West Havenkade Vlaardingen">
+        <img src="img/vlaardingen92.jpg" class="hpt" alt="Vissersboot VLD92" title="Vissersboot Vlaardingen 92">
+        <img src="img/gemeentehuis.jpg" class="hpt" alt="Burgelijke stand" title="Burgelijke stand Gemeentehuis">
+        <img src="img/deltahotel.jpg" class="hpt" alt="Delta Hotel aan de Maas" title="Delta Hotel">
         </header></div>
 
         <div id="vier">
