--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -48,8 +48,9 @@
          </div>
          </section>
         </div>
-      
+      <div class="col-12">
       <footer><p id="lit">Bron:Pinsterest / Wikipedia</p></footer>
      </div>
+    </div>
      </body>
 </html>
