--- a/Vlaardingen/index.html
+++ b/Vlaardingen/index.html
@@ -48,9 +48,10 @@
          </div>
          </section>
         </div>
-      </div>
+        </div>
+      <div class="col-12">
       <footer><p id="lit">Bron:Pinsterest / Wikipedia</p></footer>
-     
+     </div>
     
      </body>
 </html>
