--- a/Hobby/html/contact.html
+++ b/Hobby/html/contact.html
@@ -3,33 +3,83 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--<link rel="stylesheet" type="text/css" href="css/style.css">-->
+<link rel="stylesheet" type="text/css" href="../css/style.css">
 <link
 href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
 integrity=
 "sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
 crossorigin="anonymous">
 
-<title>Mijn pagina</title>
+<title>Mijn hobby's/contact form</title>
 </head>
 <body>
     <div class="container-sm">
- 
+        <header><h1 class="kop">Contact Formulier</h1> 
+ <nav>
+&nbsp
+<a href="../index.html">
+  <button type="button" class="btn btn-primary">Home</button></a>
+  <a href="over.html">
+  <button type="button" class="btn btn-primary">Over</button></a>
+  
+ </nav>
+ </header>
+ <form
+  action="https://formspree.io/f/xrgwwlgj"
+  method="POST"
+><fieldset>
+  <div class="mb-3 frm">
+    <label for="formGroupExampleInput" class="form-label">Voornaam</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
+  </div>
+
+  <div class="mb-3 frm" >
+    <label for="formGroupExampleInput2" class="form-label">Achternaam</label>
+    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="">
+  </div>
+    <div class="mb-3 frm">
+        <label for="formGroupExampleInput3" class="form-label">Adres en huisnummer</label>
+        <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="">
+      </div>
+      <div class="mb-3 frm">
+        <label for="formGroupExampleInput4" class="form-label">postcode</label>
+        <input type="text" class="form-control" id="formGroupExampleInput4" placeholder="">
+      </div>
+      <div class="mb-3 frm">
+        <label for="formGroupExampleInput5" class="form-label">Woonplaats</label>
+        <input type="text" class="form-control" id="formGroupExampleInput5" placeholder="">
+      </div>
+      <div class="form-floating mb-3 txa">Uw bericht
+        <textarea class="form-control" placeholder="" id="floatingTextarea2" style="height: 150px"></textarea>
+        <label for="floatingTextarea2"></label>
+      </div> 
+
+      <label>
+     
+    <input type="email" name="email" placeholder="Uw email" class="form-control mb-3 txa">
+  </label><br>
+
+       <button type="submit" class="form-control mb-3 mr-3 txb" style="width: 48.5%;">Verzend formulier</button>
+</form>
 
 
 
-
-
-
-
-
-
-    
-   
+</fieldset>
+  <footer>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+               <p class="mrg"><b>© 2023  Hugo Krijnberg Alle rechten voorbehouden</b></p>
+               <p class="mrg">Bron:Technews.inc.com, creative incut.com, Pinsterest, Wikipedia, YouTube.</p>
+          </footer>  
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
 integrity=
 "sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
 crossorigin="anonymous">
 </script>
+</div>
 </body>
 </html>
