--- a/Hobby/index.html
+++ b/Hobby/index.html
@@ -15,7 +15,7 @@ crossorigin="anonymous">
   <div class="container-sm">
   <header>
     <h1 class="kop">Mijn Hobby's</h1>
-    <nav>&nbsp
+    <nav class="container-fluid">
       <a href="html/over.html">
       <button type="button" class="btn btn-primary">Over</button></a>
       <a href="html/contact.html">
