--- a/Hobby/html/contact.html
+++ b/Hobby/html/contact.html
@@ -15,8 +15,8 @@ crossorigin="anonymous">
 <body>
     <div class="container-sm">
         <header><h1 class="kop">Contact Formulier</h1> 
- <nav>
-&nbsp
+ <nav class="container-fluid">
+
 <a href="../index.html">
   <button type="button" class="btn btn-primary">Home</button></a>
   <a href="over.html">
