--- a/Hobby/html/over.html
+++ b/Hobby/html/over.html
@@ -14,8 +14,8 @@ crossorigin="anonymous">
 <body>
 <div class="container-sm">
 <header><h1 class="kop">Over mij</h1>
-  <nav>
-    &nbsp
+  <nav class="container-fluid">
+    
     <a href="../index.html">
   <button type="button" class="btn btn-primary">Home</button></a>
   <a href="contact.html">
