--- a/Hobby/html/over.html
+++ b/Hobby/html/over.html
@@ -14,7 +14,7 @@ crossorigin="anonymous">
 <body>
 <div class="container-sm">
 <header><h1 class="kop">Over mij</h1>
-  <nav class="container-sm">
+  <nav class="container">
     
     <a href="../index.html">
   <button type="button" class="btn btn-primary">Home</button></a>
