--- a/Hobby/html/contact.html
+++ b/Hobby/html/contact.html
@@ -15,7 +15,7 @@ crossorigin="anonymous">
 <body>
     <div class="container-sm">
         <header><h1 class="kop">Contact Formulier</h1> 
- <nav class="container-sm">
+ <nav class="container">
 
 <a href="../index.html">
   <button type="button" class="btn btn-primary">Home</button></a>
