--- a/Hobby/index.html
+++ b/Hobby/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,6 +15,7 @@ crossorigin="anonymous">
   <div class="container-sm">
   <header>
     <h1 class="kop">Mijn Hobby's</h1>
+    <!--W3c controle. negeren opmerkingen a en img.-->
     <nav class="container">
       <a href="html/over.html">
       <button type="button" class="btn btn-primary">Over</button></a>
@@ -24,7 +25,7 @@ crossorigin="anonymous">
   </header>
   
    
-    <h2 id="tex">Welkom op mijn pagina met mijn hobby's</h2></p>
+    <h2 id="tex">Welkom op mijn pagina met mijn hobby's</h2>
     <p class="txt">Zoals je al kan zien was parachute springen een onderdeel van mijn leven, hier heb ik erg van mogen genieten</p>
     <p class="txt">Ik ben altijd fan geweest van Tomb Raider en van Assassin's Creed, prachtige games vol avontuur en verhaal.
      <p class="txt">Dit zijn niet de enige games, shooters en avontuur als Far Cry games speel ik ook heel graag.</p> 
@@ -36,13 +37,13 @@ crossorigin="anonymous">
           <div class="col"><img src="img/Hugo-3.jpg" alt="parachute springen boven vlaardingen" title="parachute springen boven vlaardingen"></div>
           <div class="col"><img src="img/Hugo-1.jpg" alt="parachute springen boven vlaardingen" title="parachute springen boven vlaardingen"></div>
             
-          <div class="col sft"><img src="img/parachutespringen.jpg"alt="parachute springen boven vlaardingen" title="parachute springen boven vlaardingen"></div>
+          <div class="col sft"><img src="img/parachutespringen.jpg" alt="parachute springen boven vlaardingen" title="parachute springen boven vlaardingen"></div>
           <div class="col"><img src="img/xbox one.jpg" alt="afbeelding game console x-box one" title="afbeelding game console x-box one"></div>
           <div class="col"><img src="img/tomb-raider.jpg" alt="afbeelding game Tomb Raider" title="Tomb Raider game"></div>
 
           <div class="col sft" ><img src="img/assassin's creed 3.jpg" alt="afbeelding assassin's creed brotherhood" title="assassin's creed brotherhood"></div>
           <div class="col"><img src="img/assassin's creed 2.jpg" alt="afbeelding assassin's creed Mirage" title="assassin's creed Mirage"></div>
-          <div class="col"><iframe src="https://www.youtube.com/embed/7Eko7Bg6QUM?si=bSA1WlBV54KZNjhN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+          <div class="col"><iframe src="https://www.youtube.com/embed/7Eko7Bg6QUM?si=bSA1WlBV54KZNjhN" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
         </div>
       
       <footer>
