--- a/Hobby/html/contact.html
+++ b/Hobby/html/contact.html
@@ -16,7 +16,7 @@ crossorigin="anonymous">
     <div class="container-sm">
         <header><h1 class="kop">Contact Formulier</h1> 
  <nav class="container">
-
+ <!--W3c controle. negeren opmerkingen betreft a.--> 
 <a href="../index.html">
   <button type="button" class="btn btn-primary">Home</button></a>
   <a href="over.html">
