--- a/Introductie/html/contact.html
+++ b/Introductie/html/contact.html
@@ -29,7 +29,7 @@
     <td>
     <figure>
     <a href="../index.html">
-    <img src="../img/kasteel.jpg" alt="link terug naar start pagina" title="Terug naar de homepage" id="home">
+    <img src="../img/kasteel.jpg" alt="link terug naar start pagina" title="Terug naar de homepage" id="home"><!--zie css pagina 2-->
     <figcaption id="start">STARTPAGINA</figcaption></a>
     </figure>
     </td>
