--- a/Hobby/html/over.html
+++ b/Hobby/html/over.html
@@ -54,11 +54,11 @@ en <a href="https://www.youtube.com/watch?v=iOVjtdU9h5Q" target="_blank">Sniper<
  Een geweldig opbouwend verhaal met vele opdrachten in een open wereld. Van zakkenroller omvormend naar een huurmoordenaar die de wereld beschermd door elementen van de andere beschaving weg te houden van de machthebbers.
 De <a href="https://nl.wikipedia.org/wiki/Far_Cry_(computerspelserie)" target="_blank">FarCry </a>reeks is ook een geweldige shooter in een open wereld met altijd weer een geweldig verhaal en vele opdrachten. Actie en humor zijn ook een onderdeel van de game play en maakt het fantastisch om alles te willen voltooien. </p><br>
 
-<p class="tt">Op dit moment ben ik de bezig met een roldak die over mijn achtertuin heen schuift en heb zonnepanelen erop aan gebracht en ervoor gezorgd dat de gradenstand van het panelen dek kan veranderen, de panelen liggen op het zuiden maar liggen op mijn schuur achter het huis en de 
+<!--<p class="tt">Op dit moment ben ik de bezig met een roldak die over mijn achtertuin heen schuift en heb zonnepanelen erop aan gebracht en ervoor gezorgd dat de gradenstand van het panelen dek kan veranderen, de panelen liggen op het zuiden maar liggen op mijn schuur achter het huis en de 
   woning is twee verdiepeningen boven de panelen uit. Vorig jaar september heb ik de installatie aangemeld en mijn verbruik is over het jaar heen gehalveerd, ik heb nu 1200PV erop liggen en er komen nog 1400 PV bij. Ik ben erg technisch en ook handig, metselen en stuccen gaan mij ook goed af, van ruwbouw tot schoon en strak werk kan ik alles maken.
   Ik ben van opleiding/beroep elektromonteur maar ook cv aanleggen, vloerverwarming, dakdekken, lood zetten of een frame lassen zijn geen probleem. Alles is mogelijk.   
 
-</p><br>
+</p>--><br>
 
 <p class="ttx">Wil je iets gemaakt of gedaan krijgen? vul dan het formulier op de volgende pagina in<br> en er word contact met je opgenomen. </p>
 <p class="tt"></p>
