--- a/Introductie/html/contact.html
+++ b/Introductie/html/contact.html
@@ -24,7 +24,7 @@
     </figure>    
     </td>
     <td>
-    <h1 id="benb"><s id="cl">BLOOD</s> BED & BREAKFAST</h1>
+    <h1 id="benb"> BED & BREAKFAST</h1>
     </td>
     <td>
     <figure>
