--- a/Portfolio/html/page3.html
+++ b/Portfolio/html/page3.html
@@ -30,7 +30,7 @@
 
 
 <div class="dropdown p-1 pss">
-  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
     Ga naar
   </button>
   <ul class="dropdown-menu txc">
