--- a/Portfolio/html/page2.html
+++ b/Portfolio/html/page2.html
@@ -32,7 +32,7 @@
 
 
 <div class="dropdown mb-2 pbp">
-  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
     Ga naar
   </button>
   <ul class="dropdown-menu txc">
