--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -44,14 +44,15 @@
         </header>
             <div class="txp">
 <p>Hoi, mijn naam is Hugo Krijnberg en ik kom uit Vlaardingen.</p>
-<p>Vorig jaar heb ik een opleiding aangevraagt bij stapbudget om mezelf om te kunnen omscholen naar webdesigner,</p>
+<p>Vorig jaar heb ik een opleiding aangevraagt bij stapbudget om mezelf te kunnen omscholen naar webdesigner,</p>
 <p>en nu ben ik op zoek naar een stage plaats om ervaring op te doen en mijn interesse in het vak verder te kunnen verbreden.</p>
 <p>Vanaf eind januari heb ik de opleiding voor webdesinger afgerond en ben voornemens een cursus JavaScript & jQuery te gaan volgen.</p>
 <p>Door een gebrek zijn mijn fysieke mogelijkheden beperkt waardoor het uit oefenen van mijn oude beroepen niet meer mogelijk is.</p>
 <p>Mijn enthousiasme voor het creëren is komen te liggen in andere vormen van bouwen zoals webdesign.</p>
 <p>Hieronder heb ik mijn projecten/huiswerk opdrachten en via de link menu rechts boven in ga je naar de verschillende oefen opdrachten.</p>
 <p>Van werken met HTML, CSS, bootstrap is dit het resultaat tot heden.</p>
-
+<p></p><br>
+<p><a href="CV Hugo krijnberg.pdf" class="link-primary cvb" target="_blank"> Curriculum Vitae </a></p>
             </div>
 
         <div class="row row-cols-6">
@@ -64,9 +65,9 @@
 <div class="col clk bx5"> <a href="https://hugo2610.github.io/Website-Hugo/Hobby" target="_blank">Hobby</a></div>
 
 </div>
-<div class="spm">
+<div class="spm"></div>
+  
 
-</div>
 
 <footer class="ftr">
 <p class="ftp"> © Copyright Hugo Krijnberg, Alle rechten voorbehouden.</p>
