--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -47,8 +47,8 @@
 <p>Vorig jaar heb ik een opleiding aangevraagt bij stapbudget om mezelf te kunnen omscholen naar webdesigner,</p>
 <p>en nu ben ik op zoek naar een stage plaats om ervaring op te doen en mijn interesse in het vak verder te kunnen verbreden.</p>
 <p>Vanaf eind januari heb ik de opleiding voor webdesinger afgerond en ben voornemens een cursus JavaScript & jQuery te gaan volgen.</p>
-<p>Door een gebrek zijn mijn fysieke mogelijkheden beperkt waardoor het uit oefenen van mijn oude beroepen niet meer mogelijk is.</p>
-<p>Mijn enthousiasme voor het creëren is komen te liggen in andere vormen van bouwen zoals webdesign.</p>
+<p>Behandelde onderwerpen zijn HTML, CSS, Bootstrap, SEO en SEA, UX, UI, Wireframe Figma, JavaScript en jQuery.  </p>
+<p>Mijn enthousiasme voor het creëren is komen te liggen in andere vormen van bouwen zoals in webdesign.</p>
 <p>Hieronder heb ik mijn projecten/huiswerk opdrachten en via de link menu rechts boven in ga je naar de verschillende oefen opdrachten.</p>
 <p>Van werken met HTML, CSS, bootstrap is dit het resultaat tot heden.</p>
 <p></p><br>
