--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
  <head>
 
  <title>Tapijt van Vlaardingen</title>
@@ -13,7 +13,7 @@
 
 
 
- <!--<meta name="viewport" content="width=device-width, initial-scale=1.0"> --> 
+ <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -212,7 +212,9 @@ Toch trok de keizer uiteindelijk aan het langste eind. In de winter van 1048-49 
                     <br>
                 </p>
                  <img src="img/stadsbrand.png" class="afmeting" style="float: left;">
-                <h1 class="ttt">STADSBRAND 1574</h1>
+
+
+               <p id="uitzondelijk">Hier zijn we nu bezig ► <h1 class="ttt">STADSBRAND 1574</h1></p>
                 <p class="ttr">In 1573/4 is Vlaardingen het toneel van de strijd van<a href="https://nl.wikipedia.org/wiki/Willem_van_Oranje" target="_blank"> Willem van Oranje</a> tegen de Spanjaarden in de<a href="https://nl.wikipedia.org/wiki/Tachtigjarige_Oorlog" target="_blank"> Tachtigjarige oorlog.</a> Op bevel van 
                     Willem van Oranje wordt Vlaardingen platgebrand om de stad niet heelhuids in Spaanse handen te laten vallen. Voor de stadsbrand is er gebruik gemaakt van de kaart van Jacob van Deventer uit ± 1560 uitde Historische Atlas Vlaardingen.
                     Deze kaart geeft nauwkeurig de situatie weer van voor de grote brand van 1574. Toch is het stadsaanzicht fictief en slechts een impressie van hoe het geweestzou kunnen zijn.
