--- a/TapijtvanVlaardingen/html/contact.html
+++ b/TapijtvanVlaardingen/html/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
  <head>
 
  <title>Opening en contact</title>
@@ -7,7 +7,7 @@
  <meta charset="utf-8">
  <meta name="description" content="">  
  <meta name="keywords" content="">
- <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
