--- a/TapijtvanVlaardingen/html/project.html
+++ b/TapijtvanVlaardingen/html/project.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
  <head>
 
  <title>Het Project</title>
@@ -13,7 +13,7 @@
 
 
 
- <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="../css/style.css"> 
 </head>
 <body>
