--- a/TapijtvanVlaardingen/html/2017.html
+++ b/TapijtvanVlaardingen/html/2017.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body class="finjrvsl">
-    <header><nav><a href="../html/Donateurs.html">Terug naar ANBI gegevens</a></nav></header>
+    <header><nav><a href="../html/Donateurs.html" class="vervorm">Terug naar ANBI gegevens</a></nav></header>
     <p><strong>Verslag 2017 - 2018</strong><br>
         <br>
         In 2018 werd gevierd dat de Slag bij Vlaardingen 1000 jaar daarvoor plaatsvond. Dirk III versloeg het leger van de Duitse keizer, zijn leenheer en zo werd Dirk heer en meester in zijn gebied. Dit wordt gezien als het begin de onafhankelijkheid van Holland. Bij de archeologische werkgroep Helinium ontstond in 2017 het idee om in navolging van het Tapijt van Bayeux, wat de Slag bij Hastings (Engeland) verbeeldt, een tapijt te maken over de Slag bij Vlaardingen.<br>
