--- a/TapijtvanVlaardingen/html/2018.html
+++ b/TapijtvanVlaardingen/html/2018.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body class="finjrvsl">
-    <header><nav><a href="../html/Donateurs.html">Terug naar ANBI gegevens</a></nav></header>
+    <header><nav><a href="../html/Donateurs.html" class="vervorm">Terug naar ANBI gegevens</a></nav></header>
     <p>Verslag september 2018 t/m december 2018<br>
         <br>
         Het maken van een historisch tapijt over de slag van Vlaardingen was tot 4 september 2018 een gezamenlijk project van Kade40 en de archeologische vereniging Helinium. In het feestjaar 2018 wordt de slag bij Vlaardingen, die plaatst vond in 1018, afgebeeld op linnen en geborduurd. Zo is een tapijt ontstaan met een stukje historie van de plaats Vlaardingen.<br>  
