--- a/TapijtvanVlaardingen/html/2023.html
+++ b/TapijtvanVlaardingen/html/2023.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body class="finjrvsl">
-    <header><nav><a href="../html/Donateurs.html">Terug naar ANBI gegevens</a></nav></header>
+    <header><nav><a href="../html/Donateurs.html" class="vervorm">Terug naar ANBI gegevens</a></nav></header>
     <h1>Verslag 2023</h1>
 
 Ook in 2023 hebben we weer heel hard gewerkt aan de verdere ontwikkeling van het Tapijt.<br>
