--- a/TapijtvanVlaardingen/html/2019.html
+++ b/TapijtvanVlaardingen/html/2019.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body class="finjrvsl">
-    <header><nav><a href="../html/Donateurs.html">Terug naar ANBI gegevens</a></nav></header>
+    <header><nav><a href="../html/Donateurs.html" class="vervorm">Terug naar ANBI gegevens</a></nav></header>
     <p>Verslag 2019<br>
 <br>
         Het jaar 2019 was een zeer succesvol jaar, met als hoogtepunt het zetten van de laatste steek op het tapijt door de burgemeester. We hebben een fotoverslag in boekvorm overhandigd aan de burgemeester én aan alle borduursters en sponsoren. Hierbij was veel pers aanwezig.<br>
