--- a/TapijtvanVlaardingen/html/2020.html
+++ b/TapijtvanVlaardingen/html/2020.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body class="finjrvsl">
-    <header><nav><a href="../html/Donateurs.html">Terug naar ANBI gegevens</a></nav></header>
+    <header><nav><a href="../html/Donateurs.html" class="vervorm">Terug naar ANBI gegevens</a></nav></header>
     <p>Jaarverslag 2020<br>
 <br>
         Dit jaar stond in het teken van de coronacrisis waardoor veel van de geplande activiteiten moesten worden afgezegd.<br>
