--- a/TapijtvanVlaardingen/html/2021.html
+++ b/TapijtvanVlaardingen/html/2021.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body class="finjrvsl">
-    <header><nav><a href="../html/Donateurs.html">Terug naar ANBI gegevens</a></nav></header><br>
+    <header><nav><a href="../html/Donateurs.html" class="vervorm">Terug naar ANBI gegevens</a></nav></header><br>
 
     Finacieel overzicht 2021     
     <table>
