--- a/TapijtvanVlaardingen/html/2022.html
+++ b/TapijtvanVlaardingen/html/2022.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body class="finjrvsl">
-    <header><nav><a href="../html/Donateurs.html">Terug naar ANBI gegevens</a></nav></header>
+    <header><nav><a href="../html/Donateurs.html" class="vervorm">Terug naar ANBI gegevens</a></nav></header>
     <table>
         <thead>
             <tr>
