--- a/TapijtvanVlaardingen/html/2024.html
+++ b/TapijtvanVlaardingen/html/2024.html
@@ -8,38 +8,37 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body class="finjrvsl">
-    <header><nav><a href="../html/Donateurs.html">Terug naar ANBI gegevens</a></nav></header>
+    <header><nav><a href="../html/Donateurs.html" class="vervorm">Terug naar ANBI gegevens</a></nav></header>
 
-    ANBI GEGEVENS 2024
+    
 
-Nummer Kamer van Koophandel: 72495820
+<h1>Doelstelling</h1>
+   <p>Het Tapijt van Vlaardingen is een initiatief van de archeologische vereniging Helinium te Vlaardingen en heeft ten doel het laten voortleven van de geschiedenis van Vlaardingen door middel van het vervaardigen, in stand houden en exposeren van een historisch zo verantwoord mogelijk wandtapijt.<br>
+     Hierdoor wordt aandacht gegeven aan de historie, archeologie en cultuur van de stad Vlaardingen. Daarbij zijn de sociale en maatschappelijke cohesie, participatie en educatie van groot belang.<br>
+   <br>  
 
-RSIN / fiscaal nummer: 859129652
+Stichting heeft niet ten doel het maken van winst.<br>
+<br>
 
-Contactgegevens
-St. Tapijt van Vlaardingen, Prinses Margrietlaan 5, 3136 AM Vlaardingen.
-e-mail: hettapijtvanvlaardingen@gmail.com
-Facebook: https://www.facebook.com/TapijtVanVlaardingen/
+<h2>Beleidsplan / activiteiten 2023-2024</h2>
 
-Naam van de stichting
-Tapijt van Vlaardingen
+Ook in 2023 hebben we weer heel hard gewerkt aan de verdere ontwikkeling van het Tapijt.<br>
+<br>
+In dit jaar is het verkrijgen van de Stadsrechten door Floris de Vijfde in 1273 groots gevierd door de gehele stad Vlaardingen, met als hoogtepunt voor ons de onthulling door de Burgemeester van de geborduurde stadsrechten.<br>
+<br>
+ Dit gebeurde tijdens de receptie welke was aangeboden door de gemeente in de Grote Kerk onder grote belangstelling van o.a. de pers. Er werd een special uitgezonden van een hele ochtend op Radio Rijnmond, met als thema een stadswandeling langs de artefacten die allemaal op het Tapijt zijn afgebeeld.
+<br>
+<br>
+Er is het hele jaar, met uitzondering van de vakanties, enorm enthousiast geborduurd. Om de teamspirit te behouden is er een koffie-uitje georganiseerd. De voorgang van het borduren wordt elke 4 weken fotografisch vastgelegd.<br>
 
-Doelstelling
-Het Tapijt van Vlaardingen is een initiatief van de archeologische vereniging Helinium te Vlaardingen en heeft ten doel het laten voortleven van de geschiedenis van Vlaardingen door middel van het vervaardigen, in stand houden en exposeren van een historisch zo verantwoord mogelijk wandtapijt. Hierdoor wordt aandacht gegeven aan de historie, archeologie en cultuur van de stad Vlaardingen. Daarbij zijn de sociale en maatschappelijke cohesie, participatie en educatie van groot belang.
-Stichting heeft niet ten doel het maken van winst.
+In Museum Vlaardingen is in het voorjaar het gedeelte van het tapijt "De Slag bij Vlaardingen" tentoongesteld en in de zomer was het tapijt van de Stadsrechten onderdeel van tentoonstelling "Catwalk over de geschiedenis van Vlaardingen".<br>
+<br>
 
-Beleidsplan / activiteiten 2023-2024
+De inkomsten voor de stichting waren uiterst positief in 2023. Naast de toegezegde subsidie van het Cultuur Fonds hebben we ook een subsidie van Vlaardingen 750 mogen ontvangen.<br>
+Daarnaast werden er inkomsten gegenereerd door de verkoop van geborduurde schilderijtjes van details van het Tapijt. Dit vond o.a. plaats op de Lentemarkt in en rond de Grote Kerk.<br>
 
-Ook in 2023 hebben we weer heel hard gewerkt aan de verdere ontwikkeling van het Tapijt.
-In dit jaar is het verkrijgen van de Stadsrechten door Floris de Vijfde in 1273 groots gevierd door de gehele stad Vlaardingen, met als hoogtepunt voor ons de onthulling door de Burgemeester van de geborduurde stadsrechten. Dit gebeurde tijdens de receptie welke was aangeboden door de gemeente in de Grote Kerk onder grote belangstelling van o.a. de pers. Er werd een special uitgezonden van een hele ochtend op Radio Rijnmond, met als thema een stadswandeling langs de artefacten die allemaal op het Tapijt zijn afgebeeld.
-
-Er is het hele jaar, met uitzondering van de vakanties, enorm enthousiast geborduurd. Om de teamspirit te behouden is er een koffie-uitje georganiseerd. De voorgang van het borduren wordt elke 4 weken fotografisch vastgelegd.
-
-In Museum Vlaardingen is in het voorjaar het gedeelte van het tapijt "De Slag bij Vlaardingen" tentoongesteld en in de zomer was het tapijt van de Stadsrechten onderdeel van tentoonstelling "Catwalk over de geschiedenis van Vlaardingen" .
-
-De inkomsten voor de stichting waren uiterst positief in 2023. Naast de toegezegde subsidie van het Cultuur Fonds hebben we ook een subsidie van Vlaardingen 750 mogen ontvangen. Daarnaast werden er inkomsten gegenereerd door de verkoop van geborduurde schilderijtjes van details van het Tapijt. Dit vond o.a. plaats op de Lentemarkt in en rond de Grote Kerk.
-
-Eind 2023 zijn we begonnen met het borduren van de Stadsbrand, die plaatsvond in 1574 en dus 450 jaar geleden in 2024, wat wederom een reden is voor herdenking. Hiervoor is subsidie aangevraagd bij de Gemeente Vlaardingen en deze is reeds toegekend.
+Eind 2023 zijn we begonnen met het borduren van de Stadsbrand, die plaatsvond in 1574 en dus 450 jaar geleden in 2024, wat wederom een reden is voor herdenking.<br>
+Hiervoor is subsidie aangevraagd bij de Gemeente Vlaardingen en deze is reeds toegekend.</p>
 
 <table>
     <thead>
