--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -17,6 +17,7 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+    <div class="col-12 col-s-12">
 <header class="bgr"><p class="great-vibes-regular">Tapijt van Vlaardingen</p>
     <nav>
         <a href="html/project.html" class="aab">Project</a>
@@ -237,7 +238,6 @@ Toch trok de keizer uiteindelijk aan het langste eind. In de winter van 1048-49 
         <a href="https://vlaardingen750.nl/" target="_blank"><img src="img/Vlaardingen 750 jaar.png" class="positie"></a>
         <a href="http://www.johnrabou.nl/" target="_blank"><img src="img/johnrabou.jpg" class="positie"></a>
        
-</footer>
+</footer></div>
 </body>
 </html>
-</a>
