--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <div class="col-12 col-s-12">
+    <div class="col-12">
 <header class="bgr"><p class="great-vibes-regular">Tapijt van Vlaardingen</p>
     <nav>
         <a href="html/project.html" class="aab">Project</a>
