--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -237,7 +237,7 @@ Toch trok de keizer uiteindelijk aan het langste eind. In de winter van 1048-49 
              <a href="https://anbi.nl/zoek-anbi/" target="_blank"><img src="img/ANBI.jpg" alt="" title="" class="positie"><a href="https://www.cultuurfonds.nl/" target="_blank"><img src="img/Het_Cultuurfonds_logo,_2023.jpg" alt="" title="" class="positie"></a>
         <a href="https://vlaardingen750.nl/" target="_blank"><img src="img/Vlaardingen 750 jaar.png" class="positie"></a>
         <a href="http://www.johnrabou.nl/" target="_blank"><img src="img/johnrabou.jpg" class="positie"></a>
-       
+       <img src="img/TvV.jpg" class="positie">
 </footer>
 </body>
 </html>
