--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    
+ <div class="col-12">   
 <header class="bgr"><p class="great-vibes-regular">Tapijt van Vlaardingen</p>
     <nav>
         <a href="html/project.html" class="aab">Project</a>
@@ -239,5 +239,6 @@ Toch trok de keizer uiteindelijk aan het langste eind. In de winter van 1048-49 
         <a href="http://www.johnrabou.nl/" target="_blank"><img src="img/johnrabou.jpg" class="positie"></a>
        <img src="img/TvV.jpg" class="positie">
 </footer>
+ </div>
 </body>
 </html>
