--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -21,7 +21,7 @@
 } 
  @media only screen and (max-width: 600px){
   [class*="col-"] {
-float: left;
+float: none;
 }
 .col-1 {width: 8.33%;}
   .col-2 {width: 16.66%;}
@@ -51,11 +51,15 @@ float: left;
             <a href="https://www.facebook.com/TapijtVanVlaardingen/" class="aab position" target="_blank">Facebook</a>
            </nav>
 </header>
+ </div>
+
 <div id="tussenruimte"></div>
+
+<div class="col-12">
  <p class="ttx">Welkom op de website van de Stichting Tapijt van Vlaardingen.</p>
 <iframe width="560" height="315" class="midpos" src="https://www.youtube.com/embed/SQko1O5ASyQ?si=c93KZbRdRZ_v1x69" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <div>
-    
+ </div>   
 
     
       <p class="ttr"> 
@@ -70,8 +74,9 @@ float: left;
 
 
 
-
+<div class="col-12">
 <div class="balk">Het begin van het tapijt</div>
+</div>
 <div>
    <p class="ttt">De scènes over de Slag bij Vlaardingen in 1018 zijn klaar. Hier volgen de beschrijvingen van de eerste vier afbeeldingen.</p>
     <img src="img/tapijt2.jpg" class="maat">
@@ -263,6 +268,6 @@ Toch trok de keizer uiteindelijk aan het langste eind. In de winter van 1048-49 
         <a href="http://www.johnrabou.nl/" target="_blank"><img src="img/johnrabou.jpg" class="positie"></a>
        <img src="img/TvV.jpg" class="positie">
 </footer>
- </div>
+ 
 </body>
 </html>
