--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -15,7 +15,7 @@
 
  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <link rel="stylesheet" type="text/css" href="css/style.css">
-<style>
+<style type="text/css">
 [class*="col-"] {
   width: 100%;
 } 
