--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -32,14 +32,17 @@
 
 <div id="tussenruimte"></div>
 
-
+<div class="col-12">
  <p class="ttx">Welkom op de website van de Stichting Tapijt van Vlaardingen.</p>
+</div>
+
+
  <div class="col-12">
 
 <iframe width="560" height="315" class="midpos" src="https://www.youtube.com/embed/SQko1O5ASyQ?si=c93KZbRdRZ_v1x69" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
    
-
+<div class="col-12">
     <div>
       <p class="ttr"> 
         
@@ -50,7 +53,7 @@
        
        Wilt u op de hoogte blijven van onze activiteiten? Schrijf u in voor onze Nieuwsbrief door het sturen van een mail.</p>
 </div>
-
+</div>
 
 
 
