--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -57,7 +57,7 @@
 
 
 
-<div class="balk">Het begin van het tapijt</div>
+<div class="balk">Het begin!</div>
 
 
    <p class="ttt">De scènes over de Slag bij Vlaardingen in 1018 zijn klaar. Hier volgen de beschrijvingen van de eerste vier afbeeldingen.</p>
@@ -88,7 +88,7 @@ Toch trok de keizer uiteindelijk aan het langste eind. In de winter van 1048-49 
     <p class="ttr">In 1070 verdreef hertog Godfried 'met de Bult' van Lotharingen - achterneef van de hertog Godfried die in 1018 bij Vlaardingen was verslagen – graaf Robrecht ‘de Fries’ uit het West-Friese graafschap. De verdreven graaf zon echter op wraak. Hij bereikte zijn doel enkele jaren later, in 1076. De hertog moest 's nachts naar het toilet, ook wel het<a href="https://nl.wikipedia.org/wiki/Vlaardingse_toiletmoord" target="_blank"> gemak</a> genoemd. Dat was toen niet meer dan een deksel met een gat erin. Daaronder had zich een huurmoordenaar opgesteld, die de hertog met een wapen in zijn achterste stak. De hertog was zwaargewond en stierf zeven dagen later. Hij werd begraven in de Lotharingse hoofdstad Verdun.
 
         Deze moord vond plaats in Vlaardingen of Antwerpen. De bronnen spreken elkaar tegen. In ieder geval maakte Godfrieds dood de weg vrij voor de herovering van het West-Friese graafschap door graaf Robrecht De Fries en zijn stiefzoon, Dirk V. Zij en hun opvolgers bouwden verder aan het graafschap, dat vanaf 12e eeuw Holland heette. Daarvan zou Vlaardingen nog een eeuw lang één van de belangrijkste plaatsen zijn.</p>
-<div class="balk">Het tapijt word vervolgt</div>
+<div class="balk">Het vervolg!</div>
   <p class="ttr">In de randen van de afbeeldingen staan archeologische vondsten uit Vlaardingen en planten en dieren uit die periodes. Zo wordt er door ongeveer 40 dames gewerkt om de geschiedenis van Vlaardingen zichtbaar te maken.</p>
 
   
