--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -17,6 +17,7 @@
  <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
+<div class="col-12">
 <body>
 <div>   
 <header class="bgr"><p class="great-vibes-regular">Tapijt van Vlaardingen</p>
@@ -250,6 +251,7 @@ Toch trok de keizer uiteindelijk aan het langste eind. In de winter van 1048-49 
         <a href="http://www.johnrabou.nl/" target="_blank"><img src="img/johnrabou.jpg" class="positie"></a>
        <img src="img/TvV.jpg" class="positie">
 </footer>
- 
+</div> 
 </body>
+
 </html>
