--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -17,7 +17,7 @@
  <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
-
+<div class="col-6">
 <body>
 <div>   
 <header class="bgr"><p class="great-vibes-regular">Tapijt van Vlaardingen</p>
@@ -32,7 +32,7 @@
  </div>
 
 <div id="tussenruimte"></div>
-
+</div>
 <div class="col-12">
  <p class="ttx">Welkom op de website van de Stichting Tapijt van Vlaardingen.</p>
 
