--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -20,7 +20,7 @@
 
 <body>
 <div class="col-xs-12 col-s-12">   
-<header class="bgr"><h1 class="great-vibes-regular">Tapijt van Vlaardingen</h1>
+<header class="bgr"><p class="great-vibes-regular">Tapijt van Vlaardingen</p>
     <nav>
         <a href="html/project.html" class="aab">Project</a>
             <a href="html/Donateurs.html" class="aab">Donateurs</a>
