--- a/TapijtvanVlaardingen/index.html
+++ b/TapijtvanVlaardingen/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<div class="col-xs-12 col-s-12">   
+<div>   
 <header class="bgr"><p class="great-vibes-regular">Tapijt van Vlaardingen</p>
     <nav>
         <a href="html/project.html" class="aab">Project</a>
