--- a/TapijtvanVlaardingen/html/contact.html
+++ b/TapijtvanVlaardingen/html/contact.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" type="text/css" href="../css/style.css"> 
 </head>
 <body>
-<header class="bgr"><p class="great-vibes-regular">Tapijt van Vlaardingen</p>
+<header class="bgr"><p class="koptext">Tapijt van Vlaardingen</p>
     <nav>
         <a href="../index.html" class="aab">Home</a>
            <a href="project.html" class="aab">Project</a>
@@ -31,7 +31,7 @@
 
 
 </header>
-<div class="ruim"></div>
+<div class="tussenruimte"></div>
 <p class="ttx"><strong>Het borduren vindt vanaf 1 maart 2019 plaats op de tweede étage van de bibliotheek,<br> Waalstraat 100A, 3131 CS Vlaardingen.</strong></p><br>
     
 <p class="tpg">Er wordt geborduurd op de volgende dagdelen:<br>
