--- a/TapijtvanVlaardingen/html/project.html
+++ b/TapijtvanVlaardingen/html/project.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" type="text/css" href="../css/style.css"> 
 </head>
 <body>
-<header class="bgr"><p class="great-vibes-regular">Tapijt van Vlaardingen</p>
+<header class="bgr"><p class="koptext">Tapijt van Vlaardingen</p>
     <nav>
 <a href="../index.html" class="aab">Home</a>
     <a href="Donateurs.html" class="aab">Donateurs</a>
@@ -29,7 +29,7 @@
 
 </nav>
 </header>
-<div id="ruimte"></div>
+<div class="tussenruimte"></div>
 <h1 class="ttx"><u>HET PROJECT</u></h1>
 <p class="ttr" >In 2018 werd gevierd dat de Slag bij Vlaardingen 1000 jaar daarvoor plaatsvond.  Bij de<a href="https://www.awn-archeologie.nl/afdeling/helinium/" target="_blank"> archeologische werkgroep Helinium</a> ontstond het idee om in navolging van het Tapijt van Bayeux, een tapijt te maken over de Slag bij Vlaardingen.
 
