--- a/TapijtvanVlaardingen/html/Donateurs.html
+++ b/TapijtvanVlaardingen/html/Donateurs.html
@@ -17,7 +17,8 @@
 <link rel="stylesheet" type="text/css" href="../css/style.css"> 
 </head>
 <body>
-<header class="bgr"><p class="koptext">Tapijt van Vlaardingen</p>
+<div class="bgr">
+<header><p class="koptext">Tapijt van Vlaardingen</p></header>
     <nav>
         <a href="../index.html" class="aab">Home</a>
              <a href="project.html" class="aab">Project</a>
@@ -25,10 +26,12 @@
 
             <a href="https://www.facebook.com/TapijtVanVlaardingen/" class="aab position" target="_blank">Facebook</a>
 </nav>
-</header>
+</div>
+
+
 <div class="tussenruimte"></div>
 <p class="ttr">Het Tapijt van Vlaardingen is afhankelijk van financiering door derden. Naast subsidies van fondsen krijgen wij ook donaties van particulieren. Bij een gift van 100 euro of meer kan uw (achter)naam op een doek met Onze Gulle Gevers worden geborduurd, samen met nog vier andere namen. Ook sturen wij u een kleine attentie. Daarvoor hebben wij dan wel uw adres nodig. Wilt u 500 of meer storten? Dan borduren wij uw (bedrijfs)logo op het doek Onze Gulle Gevers. Stuur in beide gevallen een e-mail via onderstaand formulier in met met daarin uw naam, postadres, naam of logo om te borduren en het bedrag dat u wilt doneren. Ons banknummer vindt u hieronder.</p>
-<p class="ttx"><strong>Bij een bedrag van<u> 100 euro</u> of meer wordt het logo van uw bedrijf op het Gulle Gevers Tapijt geborduurd.</strong></p>
+<p class="ttx">Bij een bedrag van<u> 100 euro</u> of meer wordt het logo van uw bedrijf op het Gulle Gevers Tapijt geborduurd.</p>
 <p class="ttr">Giften kunt u mogelijk aftrekken voor de inkomstenbelasting. Bij een culturele ANBI krijgt u een extra aftrek. Voor meer informatie kijk op de site van de <a href="https://www.belastingdienst.nl/wps/wcm/connect/bldcontentnl/belastingdienst/prive/inkomstenbelasting/aftrekposten/persoonsgebonden-aftrek/giften_aan_goede_doelen/">Belastingdienst.</a></p>
 
 <p class="ttr">E-mail: hettapijtvanvlaardingen@gmail.com<br>
@@ -56,7 +59,7 @@ Geen van de functies wordt beloond.</p>
 
 
 
-     <p class="ttx">ANBI Gegevens</p>
+     <p class="ttx">Anbi Gegevens</p>
      <p class="ttr"><a href="2017.html">Jaarverslag 2017</a></p>
      <p class="ttr"><a href="2018.html">Jaarverslag 2018</a></p>
      <p class="ttr"><a href="2019.html">Jaarverslag 2019</a></p>
