--- a/Louis/index.html
+++ b/Louis/index.html
@@ -12,23 +12,26 @@
 
     </head>
     <body>
+        <div>
 <header>
   
 <img src="img/babyboss2.jpg" title="babyboss">
-<h1>KUNG FU PANDA </h1>
+<h1>KINDEREN VOOR KINDEREN</h1>
 
 </header>
-<div id="twee">
+</div>
+<div>
 <p id="txt">
-Beste Louis, bij deze krijg je van ons informatie over Kung Fu Panda.
+Lieve Louis, voor koningsdag!
 Afz: BabyCorp.   
 </p>
 </div>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/YUBcdf25GqI?si=oBvJSaUYbD_csik3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/XbhecuoEgxs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 </div>
-<div id="EEN"></div>
-<footer><p id="ftx">©Copyright 2023 BABYCORP Alle snoep en rechten voorbehouden</p</footer>
+<div id="EEN">
+<footer></footer>
+</div>
     </body>
 </html>
